--- a/tutorial/src/main/asciidoc/service-description.adoc
+++ b/tutorial/src/main/asciidoc/service-description.adoc
@@ -92,6 +92,12 @@ For Single and multiple elements
 
 === WSDL API
 
+<button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+  Button with data-target
+</button>
+
+[role="collapse"]
+[role="well]
 [source,xml]
 ----
 
