--- a/model/README.adoc
+++ b/model/README.adoc
@@ -2,4 +2,63 @@
 
 This is a basic model for the http://www.mulesoft.org/documentation/display/current/Anypoint+Connector+DevKit[DevKit] Tutorial
 
-The two main entities are Ingredients and Recipes
+[plantuml,model,png]
+----
+title CookBook Entities
+
+package "com.cookbook.tutorial.model" #DDDDDD {
+CookBookEntity <|-- Recipe
+CookBookEntity <|-- Ingredient
+Recipe o-- “1..*” Ingredient : ingredientes
+Ingredient *- “1“ UnitType : unit
+}
+
+abstract class CookBookEntity {
+- Integer id
+- Date created
+- Date lastModified
+- String name
+}
+
+enum UnitType {
+    CUPS
+    GRAMS
+    KILOGRAMS
+    LITERS
+    MILLILITERS
+    POUNDS
+    SPOONS
+    UNIT
+}
+class Recipe {
+-Double prepTime
+-Double cookTime
+-List<String> directions
+}
+class Ingredient {
+-double quantity
+}
+
+
+package "com.cookbook.tutorial.customization” {
+Description *- “1“ Description : fields
+Description *- “1“ DataType : dataType
+}
+class Description {
+private String name
+-int entityId
+-DataType dataType
+-boolean isQuerable
+-boolean isSortable
+-String innerType
+}
+enum DataType {
+    DATE,
+    DOUBLE,
+    INTEGER,
+    LIST,
+    OBJECT,
+    STRING,
+    UNIT_TYPE
+}
+----
